<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rootLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="#EEE9E9">

        <RelativeLayout
            android:id="@+id/pay_backIcon"
            android:layout_width="72dp"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/le_oauth_back" />

        </RelativeLayout>

        <TextView
            android:id="@+id/titleText_pay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hola_pay_title"
            android:textSize="16dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnBar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#c2c2c2"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#f8f8f8"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/cash_total"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.6">
                
                <TextView
                    android:id="@+id/should_cash"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="实付金额:          元"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    />
                
                <TextView 
                    android:id="@+id/pay_total_money"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="68dp"
                    android:text="1.00"
                    android:textColor="#FF3030"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/next_step"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.4">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:background="#FF3030"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="下一步"
                    />
            </RelativeLayout>

            <!-- 
            
            <RelativeLayout
                android:id="@+id/refresh"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:scaleType="center"
                    android:src="@drawable/le_oauth_webview_refresh"/>
            </RelativeLayout>
    <WebView
        android:id="@+id/other_accoint_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnBar"
        android:layout_below="@id/titleBar"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none"/>
             -->
            
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/titleBar4"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/titleBar2"
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/backIcon4"
            android:layout_width="72dp"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/wxlogo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/titleText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/backIcon4"
            android:gravity="center"
            android:text="@string/holapay_wx_pay"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/weichatpay_radio"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="41dp" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/titleBar1"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/titleBar"
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/backIcon1"
            android:layout_width="72dp"
            android:layout_height="fill_parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/holapay_cashier_tradeinfo_name_title" />

        </RelativeLayout>
        

        <RelativeLayout
            android:id="@+id/product_desc"
            android:layout_width="72dp"
            android:layout_height="fill_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/holapay_cashier_tradeinfo_price_title" />

        </RelativeLayout>

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/product_price"
            android:layout_alignParentRight="true"
            android:layout_marginRight="34dp"
            android:text="钻石" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/product_name"
            android:textColor="#FF3030"
            android:text="1.00元" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/titleBar2"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/titleBar1"
        android:layout_marginTop="14dp"
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/backIcon6"
            android:layout_width="72dp"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/alipay" />
        </RelativeLayout>

        <TextView
            android:id="@+id/titleText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/backIcon6"
            android:text="@string/holapay_ali_pay"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/alipay_radio"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/titleText6"
            android:layout_alignBottom="@+id/titleText6"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp" />

    </RelativeLayout>

</RelativeLayout>